[gd_scene load_steps=3 format=3 uid="uid://bmtvxl8xq7hvy"]

[ext_resource type="Script" path="res://scripts/Lobby.gd" id="1_5k3wp"]
[ext_resource type="Texture2D" uid="uid://oq48gi4ymvwu" path="res://assets/ui/character_creation_background.png" id="2_bg"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_5k3wp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Lobby"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Choose Host or Join"
horizontal_alignment = 1

[node name="IPInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "localhost"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host Game"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Game"

[node name="PlayersList" type="ItemList" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 150)

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game" 